# astarte-device-sdk-python

./: .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REUSE.toml  get_started.md  makefile  pyproject.toml  run_protoc.py  setup.py
.github/workflows/: build-and-unit.yaml  check-examples-grpc.yaml  check-examples-mqtt.yaml  check-examples.yaml  code-quality.yml  doc-test-workflow copy.yaml  doc-workflow.yaml  e2e-test.yaml  e2e-tests-grpc.yaml  e2e-tests-mqtt.yaml  install_interfaces.sh  main.yaml  publish.yaml  reuse-lint.yaml  upload-coverage.yaml
.reuse/: dep5
astarte/device/: __init__.py  crypto.py  database.py  device.py  device_grpc.py  device_mqtt.py  exceptions.py  interface.py  introspection.py  mapping.py  pairing_handler.py  types.py
astarteplatform/msghub/: __init__.py  astarte_message_pb2.py  astarte_message_pb2.pyi  astarte_type_pb2.py  astarte_type_pb2.pyi  config_pb2.py  config_pb2.pyi  config_pb2_grpc.py  message_hub_service_pb2.py  message_hub_service_pb2.pyi  message_hub_service_pb2_grpc.py  node_pb2.py  node_pb2.pyi
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
e2etest/: __init__.py  aggregate.py  config.py  datastream.py  http_requests.py  main.py  property.py
e2etest/base/: aggregate.py  datastream.py  main.py  property.py
e2etest/base_grpc/: aggregate.py  datastream.py  main.py  property.py
e2etest/common/: config.py  http_requests.py  utils.py
e2etest/grpc-persistency/: main.py
e2etest/interfaces/: org.astarte-platform.python.e2etest.DeviceAggregate.json  org.astarte-platform.python.e2etest.DeviceDatastream.json  org.astarte-platform.python.e2etest.DeviceProperty.json  org.astarte-platform.python.e2etest.ServerAggregate.json  org.astarte-platform.python.e2etest.ServerDatastream.json  org.astarte-platform.python.e2etest.ServerProperty.json
tests/: test_aggregate_interface.py  test_crypto.py  test_database.py  test_datastream_interface.py  test_device.py  test_device_grpc.py  test_device_mqtt.py  test_interface.py  test_introspection.py  test_mapping.py  test_pairing_handler.py  test_project.py  test_properties_interface.py
(+27 files in other folders)
