# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astarte-device-sdk"
description = "Astarte device SDK for Python"
readme = "README.md"
# license and classifier list:
# https://pypi.org/pypi?%3Aaction=list_classifiers
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = [
    "requests>=2.25.1",
    "paho-mqtt>=1.3.1",
    "cryptography>=42.0.0",
    "bson>=0.5.5",
    "PyJWT>=1.7.0",
    "astarte-message-hub-proto==0.7.0",
]
requires-python = ">=3.8"
authors = [
  {name = "Simone Orru", email = "simone.orru@secomind.com"},
  {name = "Dario Freddi"},
  {name = "Francesco Vaiani"},
]
maintainers = [
  {name = "Simone Orru", email = "simone.orru@secomind.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
static = ["black", "pylint"]
unit = ["pytest", "pytest-cov"]
e2e = ["termcolor", "python-dateutil"]

[project.urls]
"Documentation" = "https://docs.astarte-platform.org/device-sdks/index.html"
"Source Code" = "https://github.com/astarte-platform/astarte-device-sdk-python"

[tool.setuptools.dynamic]
version = {attr = "astarte.device.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["astarte.*"]
exclude = ["contrib", "docs", "tests*", "venv"]
